lib/hrq-parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { result: peg$parseresult },
        peg$startRuleFunction  = peg$parseresult,

        peg$c0 = function(expr) {return expr;},
        peg$c1 = { type: "other", description: "expression" },
        peg$c2 = function(head, tail) { return '{"$and": [' + head + ', ' + tail + ']}';},
        peg$c3 = function(head, tail) { return '{"$or": [' + head + ', ' + tail + ']}';},
        peg$c4 = function(head, tail) { return '{"$nor": [' + head + ', ' + tail + ']}';},
        peg$c5 = function(head) {return head;},
        peg$c6 = { type: "other", description: "and" },
        peg$c7 = "and",
        peg$c8 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c9 = "&",
        peg$c10 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c11 = { type: "other", description: "or" },
        peg$c12 = "or",
        peg$c13 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c14 = "|",
        peg$c15 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c16 = { type: "other", description: "nor" },
        peg$c17 = "nor",
        peg$c18 = { type: "literal", value: "nor", description: "\"nor\"" },
        peg$c19 = "either",
        peg$c20 = { type: "literal", value: "either", description: "\"either\"" },
        peg$c21 = ":",
        peg$c22 = { type: "literal", value: ":", description: "\":\"" },
        peg$c23 = "both",
        peg$c24 = { type: "literal", value: "both", description: "\"both\"" },
        peg$c25 = "(",
        peg$c26 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c27 = ")",
        peg$c28 = { type: "literal", value: ")", description: "\")\"" },
        peg$c29 = function(expression) {return expression;},
        peg$c30 = function(left, right) {var result = '{"$and": ['; right.split(';').forEach(function(item){result += '{' + left + ': ' + item + '},';});  return result.substr(0,result.length-1) + ']}';},
        peg$c31 = function(left, right) {var result = '{"$or": ['; right.split(';').forEach(function(item){result += '{' + left + ': ' + item + '},';});  return result.substr(0,result.length-1) + ']}';},
        peg$c32 = function(left, right) {return '{' + left + ': ' + right + '}';},
        peg$c33 = function(value) {return value;},
        peg$c34 = function(value) {return '{"$not": ' + value + '}';},
        peg$c35 = function(value) {return '{"$lt": ' + value + '}';},
        peg$c36 = function(value) {return '{"$gt": ' + value + '}';},
        peg$c37 = function(value) {return '{"$lte": ' + value + '}';},
        peg$c38 = function(value) {return '{"$gte": ' + value + '}';},
        peg$c39 = function(from, to) {return '{"$gte": ' + from + ', "$lte": ' + to + '}';},
        peg$c40 = function() {return '{"$exists": true}';},
        peg$c41 = function() {return '{"$exists": false}';},
        peg$c42 = function(string) {return '{"$regex" : "^' + string.substring(1,string.length-1) + '"}';},
        peg$c43 = function(string) {return '{"$regex" : "' + string.substring(1,string.length-1) + '$"}';},
        peg$c44 = function(string) {return '{"$regex" : "' + string.substring(1,string.length-1) + '"}';},
        peg$c45 = "is",
        peg$c46 = { type: "literal", value: "is", description: "\"is\"" },
        peg$c47 = "=",
        peg$c48 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c49 = "is not",
        peg$c50 = { type: "literal", value: "is not", description: "\"is not\"" },
        peg$c51 = "!=",
        peg$c52 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c53 = "is less than",
        peg$c54 = { type: "literal", value: "is less than", description: "\"is less than\"" },
        peg$c55 = "<",
        peg$c56 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c57 = "is greater than",
        peg$c58 = { type: "literal", value: "is greater than", description: "\"is greater than\"" },
        peg$c59 = ">",
        peg$c60 = { type: "literal", value: ">", description: "\">\"" },
        peg$c61 = "is equal or less than",
        peg$c62 = { type: "literal", value: "is equal or less than", description: "\"is equal or less than\"" },
        peg$c63 = "=<",
        peg$c64 = { type: "literal", value: "=<", description: "\"=<\"" },
        peg$c65 = "<=",
        peg$c66 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c67 = "is equal or greater than",
        peg$c68 = { type: "literal", value: "is equal or greater than", description: "\"is equal or greater than\"" },
        peg$c69 = ">=",
        peg$c70 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c71 = "=>",
        peg$c72 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c73 = "ranges from",
        peg$c74 = { type: "literal", value: "ranges from", description: "\"ranges from\"" },
        peg$c75 = "{}=",
        peg$c76 = { type: "literal", value: "{}=", description: "\"{}=\"" },
        peg$c77 = "to",
        peg$c78 = { type: "literal", value: "to", description: "\"to\"" },
        peg$c79 = "-",
        peg$c80 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c81 = "exists",
        peg$c82 = { type: "literal", value: "exists", description: "\"exists\"" },
        peg$c83 = "*",
        peg$c84 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c85 = "does not exist",
        peg$c86 = { type: "literal", value: "does not exist", description: "\"does not exist\"" },
        peg$c87 = "^",
        peg$c88 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c89 = "starts with",
        peg$c90 = { type: "literal", value: "starts with", description: "\"starts with\"" },
        peg$c91 = "$start=",
        peg$c92 = { type: "literal", value: "$start=", description: "\"$start=\"" },
        peg$c93 = "ends with",
        peg$c94 = { type: "literal", value: "ends with", description: "\"ends with\"" },
        peg$c95 = "$end=",
        peg$c96 = { type: "literal", value: "$end=", description: "\"$end=\"" },
        peg$c97 = "contains",
        peg$c98 = { type: "literal", value: "contains", description: "\"contains\"" },
        peg$c99 = "$contains=",
        peg$c100 = { type: "literal", value: "$contains=", description: "\"$contains=\"" },
        peg$c101 = "matches",
        peg$c102 = { type: "literal", value: "matches", description: "\"matches\"" },
        peg$c103 = "$regex=",
        peg$c104 = { type: "literal", value: "$regex=", description: "\"$regex=\"" },
        peg$c105 = { type: "other", description: "whitespace" },
        peg$c106 = /^[ \n\t\r]/,
        peg$c107 = { type: "class", value: "[ \\n\\t\\r]", description: "[ \\n\\t\\r]" },
        peg$c108 = function(field) {return '"' + field + '"';},
        peg$c109 = function(left, right) {return right + '.' + left;},
        peg$c110 = function(left, right) {return left + '.' + right;},
        peg$c111 = "of",
        peg$c112 = { type: "literal", value: "of", description: "\"of\"" },
        peg$c113 = ".",
        peg$c114 = { type: "literal", value: ".", description: "\".\"" },
        peg$c115 = function(chars) {return chars.join('');},
        peg$c116 = "$",
        peg$c117 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c118 = /^[^:${}"'=<>&!*\^., \n\t\r]/,
        peg$c119 = { type: "class", value: "[^:${}\"'=<>&!*\\^., \\n\\t\\r]", description: "[^:${}\"'=<>&!*\\^., \\n\\t\\r]" },
        peg$c120 = { type: "other", description: "value" },
        peg$c121 = "true",
        peg$c122 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c123 = "false",
        peg$c124 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c125 = function(whole, partial) {
            return parseFloat(whole + '.' + partial)
          },
        peg$c126 = function(sign, digits) {
            return parseInt(sign ? sign + digits : digits);
          },
        peg$c127 = function(digits) {
            return digits.join('');
          },
        peg$c128 = /^[0-9]/,
        peg$c129 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c130 = "+",
        peg$c131 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c132 = function(datetime) {return '{"$date": ' + Date.parse(datetime) + '}'; },
        peg$c133 = " ",
        peg$c134 = { type: "literal", value: " ", description: "\" \"" },
        peg$c135 = function(date, time) {return date + " " + time;},
        peg$c136 = function(year, month, day) {return year + "-" + month + "-" + day; },
        peg$c137 = function(hours, minutes, seconds) {return hours + ":" + minutes + ":" + seconds; },
        peg$c138 = function(hours, minutes) {return hours + ":" + minutes; },
        peg$c139 = function(millenia, centuries, decades, years) { return millenia + centuries + decades + years; },
        peg$c140 = "0",
        peg$c141 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c142 = /^[1-9]/,
        peg$c143 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c144 = function(ones) { return "0" + ones;},
        peg$c145 = "1",
        peg$c146 = { type: "literal", value: "1", description: "\"1\"" },
        peg$c147 = /^[0-2]/,
        peg$c148 = { type: "class", value: "[0-2]", description: "[0-2]" },
        peg$c149 = function(ones) { return "1" + ones; },
        peg$c150 = "3",
        peg$c151 = { type: "literal", value: "3", description: "\"3\"" },
        peg$c152 = /^[0-1]/,
        peg$c153 = { type: "class", value: "[0-1]", description: "[0-1]" },
        peg$c154 = function(ones) { return "3" + ones; },
        peg$c155 = function(tens, ones) { return tens + ones; },
        peg$c156 = "2",
        peg$c157 = { type: "literal", value: "2", description: "\"2\"" },
        peg$c158 = /^[0-4]/,
        peg$c159 = { type: "class", value: "[0-4]", description: "[0-4]" },
        peg$c160 = function(ones) { return "2" + ones; },
        peg$c161 = /^[0-5]/,
        peg$c162 = { type: "class", value: "[0-5]", description: "[0-5]" },
        peg$c163 = "\"",
        peg$c164 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c165 = { type: "any", description: "any character" },
        peg$c166 = function(text, last) {
        	var result = "";
        	for (var c in text) {
        	    result += text[c][1];
        	}
        	return '"' + result + last + '"';
            },
        peg$c167 = /^[^\\]/,
        peg$c168 = { type: "class", value: "[^\\\\]", description: "[^\\\\]" },
        peg$c169 = function(last) {return last;},
        peg$c170 = ",",
        peg$c171 = { type: "literal", value: ",", description: "\",\"" },
        peg$c172 = function(left, right) { return left + ';' + right;},

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseresult() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseexpression();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseexpression() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parsecondition();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseand();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseexpression();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsecondition();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseor();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseexpression();
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c3(s1, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsecondition();
          if (s1 !== peg$FAILED) {
            s2 = peg$parsenor();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseexpression();
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c4(s1, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parsecondition();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c5(s1);
            }
            s0 = s1;
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }

      return s0;
    }

    function peg$parseand() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 3) === peg$c7) {
          s2 = peg$c7;
          peg$currPos += 3;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 38) {
            s2 = peg$c9;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parse_();
            if (s3 !== peg$FAILED) {
              s1 = [s1, s2, s3];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }

      return s0;
    }

    function peg$parseor() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c12) {
          s2 = peg$c12;
          peg$currPos += 2;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 124) {
            s2 = peg$c14;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c15); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parse_();
            if (s3 !== peg$FAILED) {
              s1 = [s1, s2, s3];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }

      return s0;
    }

    function peg$parsenor() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 3) === peg$c17) {
          s2 = peg$c17;
          peg$currPos += 3;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c18); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }

      return s0;
    }

    function peg$parseeither() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 6) === peg$c19) {
          s2 = peg$c19;
          peg$currPos += 6;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c20); }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s2 = peg$c21;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c22); }
          }
          if (s2 !== peg$FAILED) {
            s1 = [s1, s2];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parseboth() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c23) {
          s2 = peg$c23;
          peg$currPos += 4;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c24); }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s2 = peg$c21;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c22); }
          }
          if (s2 !== peg$FAILED) {
            s1 = [s1, s2];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parsecondition() {
      var s0, s1, s2, s3, s4, s5;
